package model;

public enum Hint {
    RIGHT_PLACE,
    WRONG_PLACE,
    ABSENT
}
