package model;

public enum Pawn {
    RED,
    GREEN,
    BLUE,
    YELLOW,
    BLACK,
    ORANGE,
    PURPLE,
    PINK
}
